code commit@Rahul
bug resolution of company detail and master form and add messages in master form

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -22,4 +22,16 @@
   
   
   
+  
+  
+ .required .control-label:after { 
+    color: #d00;
+    content: "*";
+    position: absolute;
+    margin-left: 2px;
+    
+}
+  
+  
+  
 
