--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,9 +25,9 @@
 
 		<div>
 
-<div class="w-100 text-center p-10">
+<!--<div class="w-100 text-center p-10">
 <h4 style="color: white;">Enterprise Business Suite</h4>
-</div>
+</div>-->
 
 			<div class="navbar-custom-menu">
 
