--- a/src/main/resources/templates/layouts/Master/financialactiveyear.html
+++ b/src/main/resources/templates/layouts/Master/financialactiveyear.html
@@ -12,6 +12,16 @@
 	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
 	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
 
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.2.0/css/datepicker.min.css"
+		rel="stylesheet">
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.2.0/js/bootstrap-datepicker.min.js"></script>
+
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
+		rel="stylesheet" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
@@ -56,6 +66,7 @@
 									<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
 										<!-- general form elements -->
 										<div class="box box-primary">
+											<input type="hidden" id="mess" name="mess" th:value="${message}">
 											<div class="box-header with-border">
 												<!--<h3 class="box-title">Category Master</h3>-->
 											</div><!-- /.box-header -->
@@ -65,10 +76,10 @@
 												<div class="box-body">
 
 													<div class="form-group col-md-12">
-														<label for="inputEmail4">User</label> <select
+														<label for="inputEmail4">User Code</label> <select
 															class="form-control" id="userCode" th:field="*{myUser}"
 															onchange="changeUserCode()" title="user code" required>
-															<option value="">Select User</option>
+															<option value="">Select</option>
 															<option th:each="user :  ${listMyUser}"
 																th:text="${user.userCode}" th:value=" ${user.userCode}">
 															</option>
@@ -78,7 +89,8 @@
 
 													<div class="form-group col-md-6">
 														<label for="inputPassword4">User Name</label> <input type="text"
-															class="form-control" placeholder="from date" id="userName">
+															class="form-control" placeholder="User Name" id="userName"
+															title="user name">
 													</div>
 
 													<div class="form-group col-md-6">
@@ -109,25 +121,11 @@
 
 
 
-													<div class="form-group" style="margin: 10px;">
-
-														<div class="form-check form-check-inline">
-															<input class="form-check-input" type="radio"
-																name="inlineRadioOptions" id="inlineRadio1" value="Y">
-															<label class="form-check-label"
-																for="inlineRadio1">Active</label>
-														</div>
-
-														<div class="form-check form-check-inline">
-															<input class="form-check-input" type="radio"
-																name="inlineRadioOptions" id="inlineRadio1" value="N">
-															<label class="form-check-label"
-																for="inlineRadio1">In-Active</label>
-														</div>
-
-
-
-													</div>
+													<label class="checkbox-inline">
+														<input type="radio" value="Y" name="inlineRadioOptions">Active
+														<input type="radio" value="N"
+															name="inlineRadioOptions">In-Active
+													</label>
 												</div><!-- /.box-body -->
 
 												<div class="box-footer" style="margin: 10px">
@@ -162,6 +160,24 @@
 
 
 			<script>
+
+				$(document).ready(function () {
+
+					var message = document.getElementById('mess').value
+					if (message != null && message !== "") {
+
+						swal(message, "", "success", {
+							button: "OK",
+							hideClass: {
+								popup: 'animate__animated animate__fadeOutUp'
+							},
+						});
+					} else {
+						console.log("ajax request : " + message);
+					}
+
+				});
+
 				function changeUserCode() {
 					var userCode = document.getElementById("userCode").value;
 					document.getElementById("userName").value = userCode;
