--- a/src/main/resources/templates/layouts/Master/financialyear.html
+++ b/src/main/resources/templates/layouts/Master/financialyear.html
@@ -12,6 +12,15 @@
 	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
 	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
 
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
+		rel="stylesheet" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.2.0/css/datepicker.min.css" rel="stylesheet">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.2.0/js/bootstrap-datepicker.min.js"></script>
+
+
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
@@ -30,6 +39,10 @@
 							Financial Master
 							<!--<small>it all starts here</small>-->
 						</h4>
+
+
+
+
 						<ol class="breadcrumb">
 							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
 							<li><a href="#">Examples</a></li>
@@ -56,51 +69,60 @@
 									<div class="col-md-8 shadow bg-white rounded" style="margin-top: 20px;">
 										<!-- general form elements -->
 										<div class="box box-primary">
+
+											<input type="hidden" id="mess" name="mess" th:value="${message}">
+
+
 											<div class="box-header with-border">
 												<!--<h3 class="box-title">Category Master</h3>-->
 											</div><!-- /.box-header -->
 											<!-- form start -->
 											<form role="form" th:action="@{/financialyear/}" method="POST"
 												th:object="${financialYear}">
+
+
+
+
 												<div class="box-body">
 
 													<div class="form-group col-md-12">
-												<label for="inputEmail4">Financial Year Code</label> <input type="text"
-													class="form-control" placeholder="financial year code"
-													th:field="*{financialYearCode}">
-											</div>
-											<div class="form-group col-md-12">
-												<label for="inputPassword4">From (Date)</label> <input type="date"
-													class="form-control" placeholder="from date" th:field="*{fromDate}">
-											</div>
-											<div class="form-group col-md-12">
-												<label for="inputEmail4">To (Date)</label> <input type="date"
-													class="form-control" placeholder="to date" th:field="*{toDate}">
-											</div>
-
-											<div class="form-check form-check-inline">
-												<input class="form-check-input" type="radio" name="inlineRadioOptions"
-													id="inlineRadio1" value="Y"> <label class="form-check-label"
-													for="inlineRadio1">Active</label>
-											</div>
-											
-											<div class="form-check form-check-inline">
-												<input class="form-check-input" type="radio" name="inlineRadioOptions"
-													id="inlineRadio1" value="N"> <label class="form-check-label"
-													for="inlineRadio1">In-Active</label>
-											</div>
-													
-
-													
+														<label for="inputEmail4">Financial Year Code</label> <input
+															type="text" class="form-control"
+															placeholder="Financial Year Code"
+															th:field="*{financialYearCode}" title="financial year code"
+															readonly>
+													</div>
+													<div class="form-group col-md-12">
+														<label for="inputPassword4">From (Date)</label> 
+														<input type="text" class="form-control" name="fromDate"
+															id="fromDate" placeholder='From Date' title="from date" th:field="*{fromDate}" required/>
+													</div>
+													<div class="form-group col-md-12">
+														<label for="inputEmail4">To (Date)</label>
+														<input type="text" class="form-control" name="datepicker"
+															id="datepicker" placeholder='To Date' title="to date" th:field="*{toDate}" required/>
+													</div>
 
 
-													
 
-												
+													<label class="checkbox-inline">
+														<input type="radio" value="Y" name="inlineRadioOptions">Active
+														<input type="radio" value="N"
+															name="inlineRadioOptions">In-Active
+													</label>
 
-													
 
-													
+
+
+
+
+
+
+
+
+
+
+
 
 												</div><!-- /.box-body -->
 
@@ -132,6 +154,41 @@
 			</div>
 
 			<div th:replace="fragments/footer :: footer">...</div>
+
+
+			<script>
+				$(document).ready(function () {
+
+					var message = document.getElementById('mess').value
+					if (message != null && message !== "") {
+
+						swal(message, "", "success", {
+							button: "OK",
+							hideClass: {
+								popup: 'animate__animated animate__fadeOutUp'
+							},
+						});
+					} else {
+						console.log("ajax request : " + message);
+					}
+
+				});
+
+
+				$("#datepicker").datepicker({
+					format: "yyyy",
+					viewMode: "years",
+					minViewMode: "years",
+					autoclose: true //to close picker once year is selected
+				});
+				
+				$("#fromDate").datepicker({
+					format: "yyyy",
+					viewMode: "years",
+					minViewMode: "years",
+					autoclose: true //to close picker once year is selected
+				});
+			</script>
 			<!--   <section class="content">
         
         </section>-->
