--- a/src/main/resources/templates/layouts/Master/itemMaster.html
+++ b/src/main/resources/templates/layouts/Master/itemMaster.html
@@ -14,6 +14,11 @@
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
+		rel="stylesheet" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
+
+
 
 </head>
 
@@ -35,6 +40,7 @@
 						<div class="col-md-12" style="margin-top: 20px;">
 
 							<div class="box box-primary">
+								<input type="hidden" id="mess" name="mess" th:value="${message}">
 								<div class="box-header with-border">
 									<h3 class="box-title">Item Master</h3>
 								</div>
@@ -596,6 +602,27 @@
 				});
 
 			</script>
+			
+			<script>
+
+				$(document).ready(function () {
+					var message = document.getElementById('mess').value
+					if (message != null && message !== "") {
+
+						swal(message, "", "success", {
+							button: "OK",
+							hideClass: {
+								popup: 'animate__animated animate__fadeOutUp'
+							},
+						});
+					} else {
+						console.log("ajax request : " + message);
+					}
+
+				});
+			</script>
+			
+			
 			<!--   <section class="content">
         
         </section>-->
