--- a/src/main/resources/templates/layouts/Master/openIndent.html
+++ b/src/main/resources/templates/layouts/Master/openIndent.html
@@ -14,6 +14,10 @@
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.css"
+		rel="stylesheet" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
+
 
 
 	<style>
@@ -69,6 +73,8 @@
 								<div class="col-md-12 shadow bg-white rounded" style="margin-top: 20px;">
 									<!-- general form elements -->
 									<div class="box box-primary">
+										<input type="hidden" id="mess" name="mess" th:value="${message}">
+
 										<div class="box-header with-border">
 
 											<h4 class="box-title">Indent Detail</h4>
@@ -454,6 +460,27 @@
 
 
 			</script>
+
+
+			<script>
+
+				$(document).ready(function () {
+					var message = document.getElementById('mess').value
+					if (message != null && message !== "") {
+
+						swal(message, "", "success", {
+							button: "OK",
+							hideClass: {
+								popup: 'animate__animated animate__fadeOutUp'
+							},
+						});
+					} else {
+						console.log("ajax request : " + message);
+					}
+
+				});
+			</script>
+
 
 			<script>
 				//let txt = $("#editDistName option:selected").text();
