--- a/src/main/resources/templates/layouts/listview/listofCompany.html
+++ b/src/main/resources/templates/layouts/listview/listofCompany.html
@@ -45,26 +45,22 @@
 									<table class="table table-striped" style="width: 80%">
 										<thead>
 											<tr>
-												<th scope="col">#</th>
+												<th scope="col">S.N.</th>
 												<th scope="col">Company Code</th>
 												<th scope="col">Company Name</th>
 												<th scope="col">Company Type</th>
-												<th scope="col">Director Name</th>
-												<th scope="col">State</th>
-												<th scope="col">City</th>
+												
 												
 												<th scope="col">Action</th>
 											</tr>
 										</thead>
 										<tbody>
 											<tr th:each="company,iter  : ${listCompany}">
-												<td th:text="${iter.index}">1</td>
+												<td th:text="${iter.index}+1">1</td>
 												<td th:text="${company.compCode}">Garrett Winters</td>
 												<td th:text="${company.compName}">Garrett Winters</td>
 												<td th:text="${company.compType}">Garrett Winters</td>
-												<td th:text="${company.dirName}">Garrett Winters</td>
-												<td th:text="${company.cState.stateName}">Garrett Winters</td>
-												<td th:text="${company.cCity.cityName}">Garrett Winters</td>
+												
 												
 												
 
@@ -81,8 +77,9 @@
 										</div>
 
 										<div class="box-footer">
-											<input type="submit" value="Back" onclick='window.history.back();'
-												class="btn btn-link" />
+											
+												<input type="button" value="Go back!" class="btn btn-link" onclick="history.back()">
+												
 										</div>
 
 									</form>
@@ -98,6 +95,15 @@
 			</div>
 
 			<div th:replace="fragments/footer :: footer">...</div>
+			
+			
+			<script>
+			
+			function getBack(){
+				alert("hello")
+				location.href = "companyDetail.html";
+			}
+			</script>
 			<!--   <section class="content">
         
         </section>-->
