code commit@Rahul
add messages on save in master form

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -57,6 +57,7 @@
 					
 					<li><a th:href="@{/userrights/}"><i class="fa fa-circle-o"></i>User Rights</a></li>
 					<li><a th:href="@{/module/}"><i class="fa fa-circle-o"></i>Module</a></li>
+					<li><a th:href="@{/sub-module/}"><i class="fa fa-circle-o"></i>Sub Module</a></li>
 					<li><a th:href="@{/program/}"><i class="fa fa-circle-o"></i>Program</a></li>
 				</ul>
 			</li>
