--- a/src/main/resources/templates/layouts/Master/program.html
+++ b/src/main/resources/templates/layouts/Master/program.html
@@ -74,21 +74,21 @@
 
 													<div class="form-group col-md-6">
 														<label>Program Code</label> <input type="text"
-															class="form-control" placeholder="program code"
-															th:field="*{programCode}">
+															class="form-control" placeholder="Program Code"
+															th:field="*{programCode}" title="program code">
 													</div>
 
 													<div class="form-group col-md-6">
 														<label>Program Name</label> <input type="text"
-															class="form-control" placeholder="program name"
-															th:field="*{programName}">
+															class="form-control" placeholder="Program Name"
+															th:field="*{programName}" title="program name">
 													</div>
 
 													<div class="form-group col-md-12">
 														<label class="form-label">Sub Module Name</label> <label
 															style="color: red">*</label> <select class="form-control"
-															title="Department Name" th:field="*{subModuleMaster}"
-															required>
+															 th:field="*{subModuleMaster}"
+															required title="sub module name">
 															<option value="">Select Sub Module</option>
 															<option th:each="subModule :  ${listSubModule}"
 																th:text="${subModule.subModuleName}"
@@ -98,36 +98,28 @@
 
 													<div class="form-group col-md-6">
 														<label for="inputPassword4">Program Type</label> <input
-															type="text" class="form-control" placeholder="program type"
-															th:field="*{programType}">
+															type="text" class="form-control" placeholder="Program Type"
+															th:field="*{programType}" title="program type">
 													</div>
 
 													<div class="form-group col-md-6">
 														<label for="inputPassword4">Program Href</label> <input
-															type="text" class="form-control" placeholder="program href"
-															th:field="*{programHrefName}">
+															type="text" class="form-control" placeholder="Program Href"
+															th:field="*{programHrefName}" title="program href">
 													</div>
 
 													<div class="form-group col-md-6">
 														<label for="inputPassword4">Sequence Number</label> <input
-															type="text" class="form-control"
-															placeholder="sequence number" th:field="*{seqNo}">
+															type="text" class="form-control" title="sequence number"
+															placeholder="Sequence Number" th:field="*{seqNo}">
 													</div>
 
 
-													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio"
-															name="inlineRadioOptions" id="inlineRadio1" value="Y">
-														<label class="form-check-label"
-															for="inlineRadio1">Active</label>
-													</div>
-
-													<div class="form-check form-check-inline">
-														<input class="form-check-input" type="radio"
-															name="inlineRadioOptions" id="inlineRadio1" value="N">
-														<label class="form-check-label"
-															for="inlineRadio1">In-Active</label>
-													</div>
+													<label class="checkbox-inline">
+														<input type="radio" value="Y" name="inlineRadioOptions">Active
+														<input type="radio" value="N"
+															name="inlineRadioOptions">In-Active
+													</label>
 
 												</div><!-- /.box-body -->
 
