--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -31,6 +31,18 @@
     margin-left: 2px;
     
 }
+
+
+.form-control-sm {
+			height: 30px;
+			width: 120px;
+
+		}
+
+.select {
+			width: 130px;
+			font-size: 10px;
+}
   
   
   
