--- a/src/main/resources/templates/layouts/login.html
+++ b/src/main/resources/templates/layouts/login.html
@@ -37,30 +37,42 @@
 								<div th:if="${param.logout}" class="alert alert-danger">
 								You have been logout</div>
 
+
+
+
+
+
+
 								<div class="form-outline mb-4">
-									<div class="row">
-										<div class="col-md-2">
+									<div class="row text-center" style="height: 10px; text-align:center;">
+									
+										<div class="col-md-2 m-auto">
 											<img
 												src="https://img.icons8.com/ios-glyphs/30/000000/gender-neutral-user.png" />
 										</div>
+										
 										<div class="col-md-10">
 											<input type="text" id="typeEmailX-2" class="form-control form-control-lg"
-												name="username" placeholder="Enter User Name" />
+												name="username" placeholder="Enter User Name"style="line-height: 0.8em;background: #cbe5f5;height:5px"/>
 										</div>
 									</div>
 
-									<!--<label class="form-label" for="typeEmailX-2">User Name</label>-->
+									
 								</div>
+								
+								
+								
+								
 
-								<div class="form-outline mb-4">
-									<div class="row">
-										<div class="col-md-2">
+								<div class="form-outline mb-4 mt-5">
+									<div class="row" style="height: 10px;">
+										<div class="col-md-2 m-auto">
 											<img src="https://img.icons8.com/ios-glyphs/30/000000/password--v1.png" />
 										</div>
 										<div class="col-md-10">
 											<input type="password" id="typePasswordX-2"
 												class="form-control form-control-lg" name="password"
-												placeholder="Enter Password" />
+												placeholder="Enter Password" style="line-height: 0.8em;background: #cbe5f5;"/>
 										</div>
 									</div>
 
@@ -68,15 +80,14 @@
 								</div>
 
 								<!-- Checkbox -->
-								<div class="form-check d-flex justify-content-start mb-4">
-									<input class="form-check-input" type="checkbox" value="" id="form1Example3" />
-									<label class="form-check-label" for="form1Example3"> Remember password </label>
+								<div class="form-check d-flex justify-content-start mb-4" >
+									
 								</div>
 
 
 								<div class="form-group text-center" style="margin: 3px;">
 									<img th:src="*{'data:realCaptcha/jpg;base64,'+ realCaptcha}"
-										style="height: 50px;" />
+										style="height: 45px;" />
 								</div>
 
 								<div class="form-group text-center">
