code commit @Rahul
bug resolution of category master

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -88,7 +88,7 @@
 				<ul class="treeview-menu">
 					<!-- <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>-->
 					<li>
-						<a href="#"><i class="fa fa-circle-o"></i>WhareHouse Master <i
+						<a href="#"><i class="fa fa-circle-o"></i>Store Master <i
 								class="fa fa-angle-left pull-right"></i></a>
 						<ul class="treeview-menu">
 
@@ -96,6 +96,7 @@
 							<li><a th:href="@{/category/}"><i class="fa fa-circle-o"></i> Category</a></li>
 							<li><a th:href="@{/item/}"><i class="fa fa-circle-o"></i> Item</a></li>
 							<li><a th:href="@{/uom/}"><i class="fa fa-circle-o"></i> UOM(Unit of Measurement)</a></li>
+							<li><a th:href="@{/servicecategory/}"><i class="fa fa-circle-o"></i> Service Category</a></li>
 
 
 
