--- a/src/main/resources/templates/layouts/Master/categoryMaster.html
+++ b/src/main/resources/templates/layouts/Master/categoryMaster.html
@@ -74,18 +74,20 @@
 
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Category Code</label> <input
-															type="text" class="form-control" placeholder="store code"
-															th:field="*{categCode}">
+															type="text" class="form-control" placeholder="Category Code"
+															th:field="*{categCode}" title="category code" readonly>
 													</div>
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Description</label> <input type="text"
-															class="form-control" placeholder="location">
+															class="form-control" placeholder="Description"
+															title="discription">
 													</div>
 
 													<div class="form-group col-md-6">
 														<label class="form-label">Acount Head</label> <label
 															style="color: red">*</label> <select class="form-control"
-															id="" title="type" th:field="*{accountHead}" required>
+															id="" th:field="*{accountHead}" placeholder="Account Head"
+															title="account head" required>
 															<option value="">Select</option>
 															<option value="t-1">type-1</option>
 															<option value="t-2">type-2</option>
@@ -94,40 +96,28 @@
 
 
 													<div class="form-group col-md-6">
-														<label for="inputEmail4">Description</label> <input type="text"
-															class="form-control" placeholder="description"
-															th:field="*{description}">
+														<label for="inputEmail4">Account Description</label> <input type="text"
+															class="form-control" placeholder="Account Description"
+															th:field="*{description}" title="account discription">
 													</div>
 
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Parent Code</label> <input type="text"
-															class="form-control" placeholder="parent code"
-															th:field="*{parentCode}">
+															class="form-control" placeholder="Parent Code"
+															th:field="*{parentCode}" title="parent code">
 													</div>
 
 													<div class="form-group col-md-6">
 														<label for="inputEmail4">Parent Name</label> <input type="text"
-															class="form-control" placeholder="parent name"
-															th:field="*{parentName}">
+															class="form-control" placeholder="Parent Name"
+															th:field="*{parentName}" title="parent name">
 													</div>
 
-													<div class="form-group" style="margin: 10px;">
-
-														<div class="form-check form-check-inline">
-															<input class="form-check-input" type="radio"
-																name="inlineRadioOptions" id="inlineRadio1" value="Y">
-															<label class="form-check-label"
-																for="inlineRadio1">Active</label>
-														</div>
-
-														<div class="form-check form-check-inline">
-															<input class="form-check-input" type="radio"
-																name="inlineRadioOptions" id="inlineRadio1" value="N">
-															<label class="form-check-label"
-																for="inlineRadio1">In-Active</label>
-														</div>
-
-													</div>
+													<label class="checkbox-inline">
+														<input type="radio" value="Y" name="inlineRadioOptions">Active
+														<input type="radio" value="N"
+															name="inlineRadioOptions">In-Active
+													</label>
 
 												</div><!-- /.box-body -->
 
