--- a/src/main/resources/templates/layouts/login.html
+++ b/src/main/resources/templates/layouts/login.html
@@ -44,7 +44,7 @@
 
 
 								<div class="form-outline mb-4">
-									<div class="row text-center" style="height: 10px; text-align:center;">
+									<div class="row text-center" style="height: 8px; text-align:center;">
 									
 										<div class="col-md-2 m-auto">
 											<img
@@ -53,7 +53,7 @@
 										
 										<div class="col-md-10">
 											<input type="text" id="typeEmailX-2" class="form-control form-control-lg"
-												name="username" placeholder="Enter User Name"style="line-height: 0.8em;background: #cbe5f5;height:5px"/>
+												name="username" placeholder="Enter User Name"style="line-height: 0.8em;background: #cbe5f5;font-size:1.0em;"/>
 										</div>
 									</div>
 
@@ -65,14 +65,14 @@
 								
 
 								<div class="form-outline mb-4 mt-5">
-									<div class="row" style="height: 10px;">
+									<div class="row" style="height: 8px;">
 										<div class="col-md-2 m-auto">
 											<img src="https://img.icons8.com/ios-glyphs/30/000000/password--v1.png" />
 										</div>
 										<div class="col-md-10">
 											<input type="password" id="typePasswordX-2"
 												class="form-control form-control-lg" name="password"
-												placeholder="Enter Password" style="line-height: 0.8em;background: #cbe5f5;"/>
+												placeholder="Enter Password" style="line-height: 0.8em;background: #cbe5f5;font-size:1.0em;"/>
 										</div>
 									</div>
 
